# approxx

./: README.md
source/approxx/: approximation.cpp  approximation.h  approximation.tcc
source/approxx/analytic/: constant_approximation.cpp  linear_approximation.cpp  linear_approximation.h
source/approxx/constant/: constant_approximation.cpp  constant_approximation.h
source/approxx/linear/: linear_approximation.cpp
source/approxx/numeric/: exponent_approximation.cpp  exponent_approximation.h  numeric_approximation.cpp  numeric_approximation.h
test/: CMakeLists.txt  main.cpp  test_fw.cpp  test_fw.h
test/analytic/: test_constant_approximation.cpp  test_constant_approximation.h  test_linear_approximation.cpp  test_linear_approximation.h
test/constant/: test_constant_approximation.cpp
test/linear/: test_linear_approximation.cpp  test_linear_approximation.h
test/numeric/: test_exponent_approximation.cpp  test_exponent_approximation.h
